Add: General HTML layout
Created a rough layout of the site, including some media queries and a toggle to show and hide the sidebar. The latter is just temporary, to be replaced with a permanent solution.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,22 @@
 		<script src="./script.js" defer></script>
 	</head>
 	<body>
+
+		<!-- Contains all | Centers and displayed as flex -->
+		<div>
+			
+			<!-- Portrait header -->
+			<div id="portrait_header_container" class="hidden_if_landscape">portrait header</div>
+
+			<!-- Contains sidebar and content -->
+			<div id="main_container">
+
+				<!-- Sidebar -->
+				<div id="sidebar_container">sidebar</div>
+
+				<!-- Pages container -->
+				<div id="pages_container">pages container</div>
+			</div>
+		</div>
 	</body>
 </html>
