Add: Sidebar content and styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
 			<div id="main_container">
 
 				<!-- Sidebar -->
-				<div id="sidebar_container">sidebar</div>
+				<div id="sidebar_container">
+					<h1>Games</h1>
+					<input type="text" placeholder="Search..." autocomplete="off" />
+
+					<div id="games_list">
+						<i class="subtext">Loading...</i>
+					</div><hr />
+
+					<h1>Settings</h1>
+					<div id="settings_list">
+						<i class="subtext">Select a game to show the list of settings...</i>
+					</div>
+				</div>
 
 				<!-- Pages container -->
 				<div id="pages_container">pages container</div>
