Add: Sidebar toggle button
Added a sidebar toggle button in the portrait header.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 		<div>
 			
 			<!-- Portrait header -->
-			<div id="portrait_header_container" class="hidden_if_landscape">portrait header</div>
+			<div id="portrait_header_container" class="hidden_if_landscape">
+				<div id="portrait_header">
+					<div id="sidebar_toggle"><div></div><div></div><div></div></div>
+				</div>
+			</div>
 
 			<!-- Contains sidebar and content -->
 			<div id="main_container">
