Add: Search function

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<!-- Sidebar -->
 				<div id="sidebar_container">
 					<h1>Games</h1>
-					<input type="text" placeholder="Search..." autocomplete="off" />
+					<input type="text" placeholder="Search..." autocomplete="off" id="search_input" />
 
 					<div id="games_list" class="button_container">
 						<i class="subtext">Loading...</i>
