Change: Renamed images

--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
 							<br /><br />
 
 							The benchmarks are to be taken with a grain of salt, as they may be inaccurate
-							due to drivers, patches, different component architecture and lots of other factors.
+							due to drivers, patches, different component architecture and lots of other factors.<br /><br />
+
+							To save bandwidth, I am resizing all images using <a href="https://riot-optimizer.com/" target="_blank">RIOT</a>.
+							I set the format to JPEG, 95% quality, without any chroma subsampling. That should be
+							better than what you need, and hopefully not cause a huge amount of bandwidth usage.
 						</p>
 					</div>
 
